Merge branch 'master' into axis2
Conflicts:
	compile/build.xml
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/C3DUser.java
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/Hosts.java
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/ws/ArrayOfInt.java
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/ws/Service1Locator.java
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/ws/Service1Soap.java
	src/Examples/org/objectweb/proactive/examples/webservices/c3dWS/ws/Service1SoapStub.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/WSConstants.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/build.xml
	src/Extensions/org/objectweb/proactive/extensions/webservices/soap/ProActiveDeployer.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/soap/ProActiveProvider.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/soap/WsdlServlet.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/utils/ProActiveWSUtils.java
	src/Extensions/org/objectweb/proactive/extensions/webservices/wsdl/WSDLGenerator.java

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/SHORT_ffonteno_axis2_exportation@12544 28e8926c-6b08-0410-baaa-805c5e19b8d6