@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -123,7 +123,7 @@ public abstract class Kernel implements Serializable {
         SortedMap<Long, List<Node>> nodesBySize = new TreeMap<Long, List<Node>>();
         for (Long tid : nodesByTID.keySet()) {
             List<Node> tempNodes = nodesByTID.get(tid);
-            nodesBySize.put(new Long(tempNodes.size()), tempNodes);
+            nodesBySize.put(Long.valueOf(tempNodes.size()), tempNodes);
         }
 
         // Return count nodes by using the largest list first
