@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -293,7 +293,7 @@ public class ProActiveDescriptorHandler extends AbstractUnmarshallerDecorator im
             boolean waitForTimeout = false;
 
             if (checkNonEmpty(waitForTimeoutAsString)) {
-                waitForTimeout = new Boolean(waitForTimeoutAsString).booleanValue();
+                waitForTimeout = Boolean.valueOf(waitForTimeoutAsString).booleanValue();
             }
 
             if (checkNonEmpty(timeout)) {
