@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -54,8 +54,8 @@ public class RandomLongGenerator {
 
         for (int i = 0; i < 4; i++) {
             ra2 = ra2 +
-                ((Math.abs(new Byte(seed[i]).longValue())) * new Double(Math.pow(10, (-3 + (3 * (i + 1)))))
-                        .longValue());
+                ((Math.abs(Byte.valueOf(seed[i]).longValue())) * Double.valueOf(
+                        Math.pow(10, (-3 + (3 * (i + 1))))).longValue());
         }
 
         return ra2;
