@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -101,7 +101,7 @@ public class NameAndHostDialog extends JDialog implements ActionListener, Proper
             @Override
             public void windowClosing(WindowEvent we) {
                 // handle closing behavior in propertyChange ()
-                NameAndHostDialog.this.optionPane.setValue(new Integer(JOptionPane.CLOSED_OPTION));
+                NameAndHostDialog.this.optionPane.setValue(Integer.valueOf(JOptionPane.CLOSED_OPTION));
             }
         });
 
