@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -62,7 +62,7 @@ public class AppletEntrance extends org.objectweb.proactive.examples.StandardFra
         receiveMessage("Please wait while initializing remote objects");
         try {
             Office off = (Office) org.objectweb.proactive.api.PAActiveObject.newActive(
-                    Office.class.getName(), new Object[] { new Integer(0) });
+                    Office.class.getName(), new Object[] { Integer.valueOf(0) });
             Receptionnist recept = (Receptionnist) org.objectweb.proactive.api.PAActiveObject.newActive(
                     Receptionnist.class.getName(), new Object[] { off });
             receiveMessage("The doctors' office is open!");
