@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -46,7 +46,7 @@ public class WrappedInteger implements Serializable {
     }
 
     public WrappedInteger(Integer value) {
-        intValue = new Integer(value);
+        intValue = Integer.valueOf(value);
     }
 
     /**
