@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -44,7 +44,7 @@ public class ServerImpl implements BroadcastServerItf, OneToOneServerItf, Identi
      * @see functionalTests.component.collectiveitf.multicast.Identifiable#getID()
      */
     public String getID() {
-        return new Integer(id).toString();
+        return Integer.valueOf(id).toString();
     }
 
     /*
